# secmon

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  README.md
core/src/: hub.rs  lib.rs  main.rs  models.rs  node.rs  utils.rs
core/src/hub/: client.rs  local.rs  remote.rs
core/src/models/: hub.rs  node.rs  packet.rs
core/src/node/: data.rs  handler.rs
core/src/traits/: exec.rs
discord/: Cargo.toml  README.md
discord/src/: main.rs  models.rs  parser.rs  utils.rs
http/: Cargo.toml  README.md
http/src/: main.rs  models.rs  routes.rs  utils.rs
src/: cli.rs  client.rs  comm.rs  exec.rs  hub.rs  iosered.rs  main.rs  models.rs  node.rs  server.rs  traits.rs  utils.rs
src/cli/: handler.rs
src/client/: command.rs  exec.rs  handler.rs  report.rs
src/hub/: client.rs  handler.rs  local.rs  remote.rs
src/models/: hub.rs  node.rs  nodestate.rs  packet.rs
src/node/: data.rs  handler.rs  state.rs
src/server/: response.rs
src/traits/: exec.rs  iosered.rs
telegram/: Cargo.toml  README.md
telegram/src/: main.rs  parser.rs  utils.rs
