[package]
name = "secmon"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
colored = "3.1.1"
crossbeam-channel = "0.5.15"
gethostname = "1.1.0"
paste = "1.0.15"
postcard = {version = "1.1.3", features = ["use-std"]}
serde = "1.0.228"
